# dynamite

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
cli/: cli.go
config/: config.go
docs/: BUILD.md  MAKING_OF.md  issue_7.md  pre_commit.md
hook/: .gitignore  CMakeLists.txt  GenerateVersion.cmake  Makefile  embed.go
hook/builder/: Dockerfile
hook/src/: BlockInfo.h  BossQuietNextActionTaskActionCondition.h  Config.cpp  Config.h  DInputProxy.cpp  DamageProtocol.h  DynamiteCore.cpp  DynamiteCore.h  DynamiteHook.cpp  DynamiteHook.h  DynamiteLua.cpp  DynamiteLua.h  EmblemInfo.h  HookMacros.h  Messagebox.cpp  Messagebox.h  ScriptVarResult.h  Version.h.in  dynamite.cpp  dynamite.h  dynamiteHooks.cpp  dynamitePatches.cpp  main.cpp  memtag.h  mgsvtpp_addresses_1_0_15_3_en.h  mgsvtpp_func_typedefs.h  mgsvtpp_funcptr_defs.cpp  mgsvtpp_funcptr_set.cpp  mgsvtpp_funcptr_set.h  patch.cpp  patch.h  util.cpp  util.h
hook/src/DynamiteSyncImpl/: DynamiteSyncImpl.cpp  DynamiteSyncImpl.h  DynamiteSyncSchema.fbs  DynamiteSyncSchema_generated.h
hook/src/Tpp/: BossQuietActionCommand.h  BossQuietActionControllerImplWork.h  BossQuietActionTask.h  BossQuietDamage.h  GameObject.cpp  PlayerDamage.h  TppFOB.h  TppGameObject.h  TppGameStatusFlag.h  TppGmBossquietLifeControllerWork.h  TppMarkerType.h  TppNPCLifeState.h  TppSoldier2.cpp  TppTypes.cpp  TppTypes.h
hook/src/lua/: lua.h
installer/: installer.go
masterserver/: masterserver.go
misc/: damage_by_id.txt  missionlist.md  missionnames.md  npc_weapons.txt
moddata/: moddata.go
moddata/coop_essentials/: README.md  generate.go
moddata/init_fpkd/Assets/tpp/level/mission2/init/: init_sequence.lua
moddata/o50050_additional_fpkd/Assets/tpp/level/mission2/online/o50050/: o50050_sequence.lua
moddata/o50050_area_fpkd/Assets/tpp/script/mission/: mission_main.lua
moddata/outsidescripts/: LIP.lua  helpers.lua
moddata/s10020_area_fpkd/Assets/tpp/level/mission2/story/s10020/: s10020_sequence.lua
moddata/s10033_area_fpkd/Assets/tpp/level/mission2/story/s10033/: s10033_sequence.lua
moddata/s10036_area_fpkd/Assets/tpp/level/mission2/story/s10036/: s10036_sequence.lua
moddata/s10040_area_fpkd/Assets/tpp/level/mission2/story/s10040/: s10040_sequence.lua
moddata/s10041_area_fpkd/Assets/tpp/level/mission2/story/s10041/: s10041_sequence.lua
moddata/s10043_area_fpkd/Assets/tpp/level/mission2/story/s10043/: s10043_sequence.lua
moddata/s10044_area_fpkd/Assets/tpp/level/mission2/story/s10044/: s10044_sequence.lua
moddata/s10045_area_fpkd/Assets/tpp/level/mission2/story/s10045/: s10045_sequence.lua
moddata/s10050_area_fpkd/Assets/tpp/level/mission2/story/s10050/: s10050_sequence.lua
moddata/s10052_area_fpkd/Assets/tpp/level/mission2/story/s10052/: s10052_sequence.lua
moddata/s10054_area_fpkd/Assets/tpp/level/mission2/story/s10054/: s10054_sequence.lua
moddata/s10070_area_fpkd/Assets/tpp/level/mission2/story/s10070/: s10070_sequence.lua
moddata/s10080_area_fpkd/Assets/tpp/level/mission2/story/s10080/: s10080_sequence.lua
moddata/s10081_area_fpkd/Assets/tpp/level/mission2/story/s10081/: s10081_sequence.lua
moddata/s10082_area_fpkd/Assets/tpp/level/mission2/story/s10082/: s10082_sequence.lua
moddata/s10085_area_fpkd/Assets/tpp/level/mission2/story/s10085/: s10085_sequence.lua
moddata/s10086_area_fpkd/Assets/tpp/level/mission2/story/s10086/: s10086_sequence.lua
moddata/s10090_area_fpkd/Assets/tpp/level/mission2/story/s10090/: s10090_sequence.lua
moddata/s10091_area_fpkd/Assets/tpp/level/mission2/story/s10091/: s10091_sequence.lua
moddata/standalone/: DamageParameterTables.lua  Tpp.lua  TppDefine.lua  TppMain.lua  TppMission.lua  TppMissionList.lua  TppPlayer.lua  TppRevenge.lua  script_loader.lua
moddata/tl/: generate.go
patch/: caves.txt  patch.go
savebackup/: savebackup.go
updatecheck/: updatecheck.go
util/: getattr_linux.go  getattr_windows.go  util.go
webui/: webui.go
webui/docs/: docs.md  main.go
webui/handlers/: handlers.go
webui/static/: embed.go
webui/static/css/: main.css
webui/templates/: .gitignore  donate.tmpl  donated.tmpl  embed.go  footer.tmpl  header.tmpl  missionlist.md  missionlist.tmpl  save.tmpl  start.tmpl  status.tmpl
(+30 files in other folders)
